# docs/swaggerDocs/__swaggerDocsBuild.json
@@ -1150,6 +1150,19 @@
                   }
                 }
               },
+              "405": {
+                "description": "Not Allowed.",
+                "content": {
+                  "application/json": {
+                    "schema": {
+                      "$ref": "#/components/schemas/Error"
+                    },
+                    "example": {
+                      "message": "Not Allowed."
+                    }
+                  }
+                }
+              },
               "500": {
                 "description": "Internal server error",
                 "content": {
@@ -3017,7 +3030,7 @@
                                       "$ref": "#/components/schemas/AutoGeneratedData"
                                     },
                                     {
-                                      "$ref": "#/paths/~1users~1%7BuserId%7D~1contactInfos/post/responses/allOf/1/200/content/application~1json/schema/allOf/1"
+                                      "$ref": "#/components/schemas/UserContactInfo"
                                     }
                                   ]
                                 }
@@ -3115,37 +3128,7 @@
                           "$ref": "#/components/schemas/AutoGeneratedData"
                         },
                         {
-                          "type": "object",
-                          "required": [
-                            "type",
-                            "value"
-                          ],
-                          "properties": {
-                            "type": {
-                              "type": "string",
-                              "enum": [
-                                "email-address",
-                                "mobile-number",
-                                "telephone",
-                                "app-admin"
-                              ]
-                            },
-                            "value": {
-                              "type": "string"
-                            },
-                            "countryCode": {
-                              "type": "string"
-                            },
-                            "verified": {
-                              "type": "boolean"
-                            }
-                          },
-                          "example": {
-                            "type": "email-address",
-                            "value": "gilbert.cuerbo@gmail.com",
-                            "countryCode": "PH",
-                            "verified": false
-                          }
+                          "$ref": "#/components/schemas/UserContactInfo"
                         }
                       ]
                     },
@@ -3213,7 +3196,7 @@
                           "$ref": "#/components/schemas/AutoGeneratedData"
                         },
                         {
-                          "$ref": "#/paths/~1users~1%7BuserId%7D~1contactInfos/post/responses/allOf/1/200/content/application~1json/schema/allOf/1"
+                          "$ref": "#/components/schemas/UserContactInfo"
                         }
                       ]
                     },
@@ -3308,7 +3291,7 @@
                           "$ref": "#/components/schemas/AutoGeneratedData"
                         },
                         {
-                          "$ref": "#/paths/~1users~1%7BuserId%7D~1contactInfos/post/responses/allOf/1/200/content/application~1json/schema/allOf/1"
+                          "$ref": "#/components/schemas/UserContactInfo"
                         }
                       ]
                     },
@@ -3374,7 +3357,7 @@
                           "$ref": "#/components/schemas/AutoGeneratedData"
                         },
                         {
-                          "$ref": "#/paths/~1users~1%7BuserId%7D~1contactInfos/post/responses/allOf/1/200/content/application~1json/schema/allOf/1"
+                          "$ref": "#/components/schemas/UserContactInfo"
                         }
                       ]
                     },
@@ -3763,115 +3746,6 @@
             }
           ]
         }
-      },
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Create a user limited transaction",
-        "description": "Create a user limited transaction",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "type": "object",
-                "required": [
-                  "limit",
-                  "attempts",
-                  "type"
-                ],
-                "properties": {
-                  "limit": {
-                    "type": "number"
-                  },
-                  "attempts": {
-                    "type": "number"
-                  },
-                  "type": {
-                    "type": "string",
-                    "enum": [
-                      "signin",
-                      "otp-signin",
-                      "forgot-pass",
-                      "reset-pass",
-                      "verify-contact"
-                    ]
-                  },
-                  "key": {
-                    "type": "string"
-                  },
-                  "value": {
-                    "type": "string"
-                  },
-                  "expTime": {
-                    "type": "string",
-                    "format": "date-time"
-                  },
-                  "recipient": {
-                    "type": "string"
-                  },
-                  "disabled": {
-                    "type": "boolean"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "allOf": [
-            {
-              "$ref": "#/paths/~1roles/get/responses/allOf/0"
-            },
-            {
-              "200": {
-                "description": "Successfull user limited transaction creation",
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "type": "object",
-                      "allOf": [
-                        {
-                          "$ref": "#/components/schemas/AutoGeneratedData"
-                        },
-                        {
-                          "$ref": "#/components/schemas/UserLimitedTransaction"
-                        }
-                      ]
-                    },
-                    "example": {
-                      "_id": "5efafc09-a05b-4acd-825d-689675298ae3",
-                      "limit": 5,
-                      "attempts": 0,
-                      "type": "reset-pass",
-                      "key": 419188,
-                      "value": "test",
-                      "expTime": "2023-09-08T02:31:09.082Z",
-                      "recipient": "app-admin",
-                      "disabled": false,
-                      "createdAt": "2023-08-27T14:51:58.619Z",
-                      "updatedAt": "2023-08-27T14:51:58.619Z"
-                    }
-                  }
-                }
-              }
-            }
-          ]
-        }
       }
     },
     "/users/{userId}/limitedTransactions/{limitedTransactionId}": {
@@ -3896,7 +3770,7 @@
           },
           {
             "in": "path",
-            "name": "limitedtransactionId",
+            "name": "limitedTransactionId",
             "required": true,
             "schema": {
               "type": "string",
@@ -3966,7 +3840,7 @@
           },
           {
             "in": "path",
-            "name": "limitedtransactionId",
+            "name": "limitedTransactionId",
             "required": true,
             "schema": {
               "type": "string",
@@ -4015,76 +3889,6 @@
             {
               "200": {
                 "description": "Successfull user limited transaction update",
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "type": "object",
-                      "allOf": [
-                        {
-                          "$ref": "#/components/schemas/AutoGeneratedData"
-                        },
-                        {
-                          "$ref": "#/components/schemas/UserLimitedTransaction"
-                        }
-                      ]
-                    },
-                    "example": {
-                      "_id": "5efafc09-a05b-4acd-825d-689675298ae3",
-                      "limit": 5,
-                      "attempts": 0,
-                      "type": "reset-pass",
-                      "key": 419188,
-                      "value": "test",
-                      "expTime": "2023-09-08T02:31:09.082Z",
-                      "recipient": "app-admin",
-                      "disabled": false,
-                      "createdAt": "2023-08-27T14:51:58.619Z",
-                      "updatedAt": "2023-08-27T14:51:58.619Z"
-                    }
-                  }
-                }
-              }
-            }
-          ]
-        }
-      },
-      "delete": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Delete a user limited transaction",
-        "description": "Delete a user limited transaction",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "in": "path",
-            "name": "limitedtransactionId",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "responses": {
-          "allOf": [
-            {
-              "$ref": "#/paths/~1roles/get/responses/allOf/0"
-            },
-            {
-              "200": {
-                "description": "Successfull user limited transaction deletion",
                 "content": {
                   "application/json": {
                     "schema": {
