# src/controllers/userLimitedTransactionController.ts
@@ -1,120 +1,93 @@
-import RoleModel, { IRole, IFeatureRef } from '../dataSource/models/roleModel'
-import DataRequest, { IListOutput, IPgeInfo } from '../utilities/dataQuery'
-import featureController from './featureController'
-import roleController from './roleController'
+import UserModel, { IUser, ILimitedTransaction, TLimitedTransactionType } from '../dataSource/models/userModel'
+import userController from './userController'
+import DataCleaner from '../utilities/dataCleaner'
 // import Config from '../utilities/config'
 
 // const env = Config.getEnv()
 
-class RoleFeaturesController {
-    public hasFeature(role:IRole, featureId:string):boolean {
-        if (role && role.featuresRefs) {
-            for (let ref of role.featuresRefs) {
-                if (ref.featureId === featureId) return true
+class UserLimitedTransactionController {
+    public hasLimitedTransactionType(user:IUser, limitedTransactionType:string):boolean {
+        if (user && user.limitedTransactions) {
+            for (let lt of user.limitedTransactions) {
+                if (lt.type === limitedTransactionType) return true
             }
         }
 
         return false
     }
 
-    public async getFeatureRefByObj(role:IRole, featureId:string):Promise<IFeatureRef|null> {
+    public getLimitedTransactionByType(user:IUser, limitedTransactionType:string):ILimitedTransaction|null {
 
-        if (role && role.featuresRefs) {
-            for (let ref of role.featuresRefs) {
-                if (ref.featureId === featureId) return ref
+        if (user && user.limitedTransactions) {
+            for (let lt of user.limitedTransactions) {
+                if (lt.type === limitedTransactionType) return lt
             }
         }
 
         return null
     }
 
-    public async getFeatureRefById(roleId:string, featureRefId:string):Promise<IFeatureRef|null> {
-        if (!(roleId && featureRefId)) throw(400)
+    public getLimitedTransactionById(user:IUser, limitedTransactionId:string):ILimitedTransaction|null {
 
-        const role = await roleController.getRole({_id: roleId})
-        if (!role) throw(404)
+        if (user && user.limitedTransactions) {
+            for (let lt of user.limitedTransactions) {
+                if (lt._id === limitedTransactionId) return lt
+            }
+        }
 
-        const featureRef = role!.featuresRefs?.id(featureRefId)
-        if (!featureRef) throw(404)
-
-        return featureRef
+        return null
     }
 
-    public async getRoleFeatureRefs(roleId:string):Promise<IFeatureRef[]> {
-        let result:IFeatureRef[] = []
-        if (!roleId) throw(400)
+    public async getLimitedTransaction(userId:string, limitedTransactionId:string):Promise<ILimitedTransaction|null> {
+        if (!(userId && limitedTransactionId)) throw(400)
 
-        const role = await roleController.getRole({_id: roleId})
-        if (!role) throw(404)
-        result = role!.featuresRefs? role!.featuresRefs: []
-        
-        if (role.absoluteAuthority) {
-            let allFeatures = await featureController.getAllFeatures()
-            result = allFeatures? allFeatures.map(item => ({
-                featureId: item._id!
-            })): []
-        }
+        const user = await userController.getUser({_id: userId})
+        if (!user) throw(404)
+
+        const userInfo = this.getLimitedTransactionById(user, limitedTransactionId)
+        if (!userInfo) throw(404)
+
+        return userInfo
+    }
+
+    public async getLimitedTransactions(userId:string):Promise<ILimitedTransaction[]> {
+        let result:ILimitedTransaction[] = []
+        if (!userId) throw(400)
+
+        const user = await userController.getUser({_id: userId})
+        if (!user) throw(404)
+        result = user!.limitedTransactions? user!.limitedTransactions: []
 
         return result
     }
 
-    public async saveFeatureRef(roleId:string, featureId:string):Promise<IFeatureRef|null> {
-        if (!(roleId && featureId)) throw(400)
+    public async updateLimitedTransaction(
+        userId:string, limitedTransactionId:string,
+        limit:number, attempts:number, key:string,
+        value:string, expTime:string, recipient:string,
+        disabled:boolean|string
+    ):Promise<ILimitedTransaction|null> {
+        if (!(userId && limitedTransactionId)) throw(400)
 
-        const role = await RoleModel.findOne({_id: roleId})
-        if (!role) throw(404)
+        const user = await UserModel.findOne({_id: userId})
+        if (!user) throw(404)
+        if (!user.limitedTransactions?.id(limitedTransactionId)) throw(404)
 
-        const featuresMap = await featureController.getFeaturesMap()
-        // check if feature existed on features collection
-        if (!featuresMap[featureId]) throw(404)
-        // check if the feature to update is existing on the role features refs
-        if (this.hasFeature(role, featureId)) throw(409)
-
-        role.featuresRefs!.push({featureId})
-        await role.save()
-        await roleController.cachedData.removeCacheData(roleId)
-
-        return this.getFeatureRefByObj(role, featureId)
-    }
-
-    public async updateFeatureRef(roleId:string, featureRefId:string, featureId:string):Promise<IFeatureRef|null> {
-        if (!(roleId && featureRefId && featureId)) throw(400)
-
-        const role = await RoleModel.findOne({_id: roleId})
-        if (!role) throw(404)
-        if (!role.featuresRefs?.id(featureRefId)) throw(404)
-
-        const featuresMap = await featureController.getFeaturesMap()
-        // check if feature existed on features collection
-        if (!featuresMap[featureId]) throw(404)
-
-        // check if the feature to update is existing on the role features refs
-        if (this.hasFeature(role, featureId)) throw(409)
-
-        role.featuresRefs!.id(featureRefId)!.featureId = featureId
-        await role.save()
-        await roleController.cachedData.removeCacheData(roleId)
-
-        return role.featuresRefs!.id(featureRefId)
-    }
-
-    public async deleteFeatureRef(roleId:string, featureRefId:string):Promise<IFeatureRef|null> {
-        if (!(roleId && featureRefId)) throw(400)
-
-        const role = await RoleModel.findOne({_id: roleId})
-        if (!role) throw(404)
-
-        const featureRefData = role!.featuresRefs?.id(featureRefId)
-        if (featureRefData) {
-            role!.featuresRefs?.id(featureRefId)?.deleteOne()
-            await role.save()
-            await roleController.cachedData.removeCacheData(roleId)
-        } else {
-            throw(404)
+        if (limit) user.limitedTransactions!.id(limitedTransactionId)!.limit = limit
+        if (attempts) user.limitedTransactions!.id(limitedTransactionId)!.attempts = attempts
+        if (key) user.limitedTransactions!.id(limitedTransactionId)!.key = key
+        if (value) user.limitedTransactions!.id(limitedTransactionId)!.value = value
+        if (expTime) user.limitedTransactions!.id(limitedTransactionId)!.expTime = expTime
+        if (recipient) user.limitedTransactions!.id(limitedTransactionId)!.recipient = recipient
+        if (DataCleaner.getBooleanData(disabled).isValid) {
+            user.limitedTransactions!.id(limitedTransactionId)!.disabled = DataCleaner.getBooleanData(disabled).data
         }
 
-        return featureRefData? featureRefData: null
+        await user.save()
+        await userController.cachedData.removeCacheData(userId)
+
+        return user.limitedTransactions!.id(limitedTransactionId)
     }
 }
 
-export default new RoleFeaturesController()
+export default new UserLimitedTransactionController()
