# src/routes/userLimitedTransactionRoutes.ts
@@ -4,59 +4,49 @@ import ErrorHandler from '../utilities/errorHandler'
 import Config from '../utilities/config'
 import routerIdentity from '../utilities/routerIdentity'
 
-import roleFeatureController from '../controllers/roleFeatureController'
-import { IFeatureRef } from '../dataSource/models/roleModel'
+import userLimitedTransactionController from '../controllers/userLimitedTransactionController'
+import { ILimitedTransaction } from '../dataSource/models/userModel'
 
 const router = express.Router()
 const env = Config.getEnv()
 
-router.get(env.RootApiEndpoint + 'roles/:roleId/features', async (req, res) => {
-    const { roleId } = req.params
+router.get(env.RootApiEndpoint + 'users/:userId/limitedTransactions/', async (req, res) => {
+    const { userId } = req.params
 
-    const [result, statusCode] = await ErrorHandler.execute<IFeatureRef[]>(async () => {
-        return await roleFeatureController.getRoleFeatureRefs(roleId)
+    const [result, statusCode] = await ErrorHandler.execute<ILimitedTransaction[]>(async () => {
+        return await userLimitedTransactionController.getLimitedTransactions(userId)
     })
 
     return res.status(statusCode).send(result)
 })
 
-router.post(env.RootApiEndpoint + 'roles/:roleId/features/', async (req, res) => {
-    const { roleId } = req.params
-    const { featureId } = req.body
+router.get(env.RootApiEndpoint + 'users/:userId/limitedTransactions/:limitedTransactionId', async (req, res) => {
+    const { userId, limitedTransactionId } = req.params
 
-    const [result, statusCode] = await ErrorHandler.execute<IFeatureRef>(async () => {
-        return await roleFeatureController.saveFeatureRef(roleId, featureId)
+    console.log(limitedTransactionId)
+
+    const [result, statusCode] = await ErrorHandler.execute<ILimitedTransaction>(async () => {
+        return await userLimitedTransactionController.getLimitedTransaction(userId, limitedTransactionId)
     })
 
     return res.status(statusCode).send(result)
 })
 
-router.get(env.RootApiEndpoint + 'roles/:roleId/features/:featureRefId', async (req, res) => {
-    const { roleId, featureRefId } = req.params
+router.put(env.RootApiEndpoint + 'users/:userId/limitedTransactions/:limitedTransactionId', async (req, res) => {
+    const { userId, limitedTransactionId } = req.params
+    const {
+        limit, attempts, key,
+        value, expTime, recipient,
+        disabled
+    } = req.body
 
-    const [result, statusCode] = await ErrorHandler.execute<IFeatureRef>(async () => {
-        return await roleFeatureController.getFeatureRefById(roleId, featureRefId)
-    })
-
-    return res.status(statusCode).send(result)
-})
-
-router.put(env.RootApiEndpoint + 'roles/:roleId/features/:featureRefId', async (req, res) => {
-    const { roleId, featureRefId } = req.params
-    const { featureId } = req.body
-
-    const [result, statusCode] = await ErrorHandler.execute<IFeatureRef>(async () => {
-            return await roleFeatureController.updateFeatureRef(roleId, featureRefId, featureId)
-    })
-
-    return res.status(statusCode).send(result)
-})
-
-router.delete(env.RootApiEndpoint + 'roles/:roleId/features/:featureRefId', async (req, res) => {
-    const { roleId, featureRefId } = req.params
-
-    const [result, statusCode] = await ErrorHandler.execute<IFeatureRef>(async () => {
-        return await roleFeatureController.deleteFeatureRef(roleId, featureRefId)
+    const [result, statusCode] = await ErrorHandler.execute<ILimitedTransaction>(async () => {
+        return await userLimitedTransactionController.updateLimitedTransaction(
+            userId, limitedTransactionId,
+            limit, attempts, key,
+            value, expTime, recipient,
+            disabled
+        )
     })
 
     return res.status(statusCode).send(result)
